--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "querystring": "^0.2.0",
     "socket.io": "^1.4.5"
   }
 }
